<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="28dp"
        android:text="@string/settings_text" />
    
    <RadioGroup
        android:id="@+id/settings_persistence"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	
    <RadioButton
        android:id="@+id/settings_handle_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:onClick="setPersistence"
        android:checked="false"
        android:text="@string/settings_handle_system" />

    <RadioButton
        android:id="@+id/settings_custom_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setPersistence"
        android:checked="false"
        android:text="@string/settings_custom_handle" />
    
    </RadioGroup>

    <EditText
        android:id="@+id/searchTagByIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_persistence"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/searchTagByIdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/searchTagByIdText"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/searchTagByIdText"
        android:text="@string/search_button" />

</RelativeLayout>